cssfolder/productpage.css
/* ... */
/*414px*/
@media only screen and (min-width: 414px) and (max-width: 420px) {
  .top-bar {
    margin-left: -10px;
    height: 2vh;
  }

  form {
    display: none;
  }

  .logo img {
    height: 4vh;
  }

  .logo h5 {
    font-size: 14px;
    display: none;
  }

  .fa-user {
    font-size: 13px;
  }

  .login-signup-btn {
    width: 210px;
    margin-left: 105px;
  }

  .navbar {
    padding: 18px 0px;
  }

  .list {
    position: absolute;
    top: 44%;
    right: -130%;
    width: 414px;
    line-height: 35px;
    height: 314px;
    background: rgb(7, 125, 239);
    display: flex;
    align-items: center;
    flex-direction: column;
    padding: 0px 20px;
    transition: all 0.5s ease;
    /*
    -webkit-transition: ;
    -moz-transition: ;
    -ms-transition: ;
    -o-transition: ;
    */
  }

  .list.open {
    right: 0;
  }

  .menu-bar {
    /* border: 2px solid black; */
    display: block;
    position: absolute;
    top: 7px;
    right: 10px;
    /* margin-left: 370px; */
  }

  .hero-txt {
    padding: 0px 10px;
  }

  footer {
    height: 96vh;
  }

  .footnote-links-container {
    /* border: 1px solid black; */
    width: 125%;
    margin-left: -40px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
  }

  .footnote {
    position: relative;
    /* border: 2px solid black; */
    margin-bottom: 20px;
  }

  .logo-container {
    margin-bottom: 10px;
  }

  .resources-links {
    margin-left: -10px;
  }

  .company-links {
    /* border: 1px solid black; */
    margin-left: 7px;
    margin-top: -4px;
  }

  .contact-links {
    position: relative;
    left: -100px;
  }

  .subscription-section {
    position: relative;
    left: -20px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    height: 15vh;
  }

  .input-email input {
    margin-bottom: 10px;
  }

  body {
    overflow-x: hidden;
  }
}

/*393 mobile width*/
@media only screen and (min-width: 393px) and (max-width: 400px) {
  .top-bar {
    margin-left: -10px;
    height: 5vh;
  }

  form {
    display: none;
  }

  .logo img {
    height: 4vh;
    margin-left: -20px;
  }

  .logo h5 {
    font-size: 14px;
    display: none;
  }

  .fa-user {
    font-size: 13px;
  }

  .login-signup-btn {
    width: 210px;
    margin-left: 100px;
  }

  .navbar {
    padding: 18px 0px;
  }

  .list {
    position: absolute;
    top: 44%;
    right: -130%;
    width: 393px;
    line-height: 35px;
    height: 314px;
    background: rgb(7, 125, 239);
    display: flex;
    align-items: center;
    flex-direction: column;
    padding: 0px 20px;
    transition: all 0.5s ease;
  }
  .list.open {
    right: 0;
  }

  .menu-bar {
    /* border: 2px solid black; */
    display: block;
    position: absolute;
    top: 7px;
    right: 10px;
    /* margin-left: 370px; */
  }

  .hero-txt {
    padding: 0px 10px;
  }

  footer {
    height: 106vh;
  }

  .logo-container {
    margin-bottom: 10px;
  }

  .footnote-links-container {
    /* border: 1px solid black; */
    width: 120%;
    position: relative;
    left: -30px;
  }

  .footnote {
    position: relative;
    left: -10px;
    /* border: 2px solid black; */
    margin-bottom: 20px;
  }

  .resources-links {
    margin-left: 20px;
  }

  .contact-links {
    position: relative;
    left: -97px;
  }

  .legal-links {
    margin-left: 46px;
  }

  .subscription-section {
    position: relative;
    top: 4%;
    left: -30px;
  }

  .input-email input {
    margin-bottom: 10px;
  }

  body {
    overflow-x: hidden;
  }
}

/*390 mobile width*/
@media only screen and (min-width: 390px) and (max-width: 392px) {
  .top-bar {
    margin-left: -10px;
    height: 5vh;
  }

  form {
    display: none;
  }

  .logo img {
    height: 4vh;
    position: relative;
    left: -20px;
  }

  .logo h5 {
    font-size: 14px;
    display: none;
  }

  .fa-user {
    font-size: 13px;
  }

  .login-signup-btn {
    width: 210px;
    margin-left: 86px;
  }

  .navbar {
    padding: 18px 0px;
  }

  .list {
    position: absolute;
    top: 44%;
    right: -130%;
    width: 390px;
    line-height: 35px;
    height: 314px;
    background: rgb(7, 125, 239);
    display: flex;
    align-items: center;
    flex-direction: column;
    padding: 0px 20px;
    transition: all 0.5s ease;
  }
  .list.open {
    right: 0;
  }

  .menu-bar {
    /* border: 2px solid black; */
    display: block;
    position: absolute;
    top: 7px;
    right: 10px;
    /* margin-left: 370px; */
  }

  .hero-txt {
    padding: 0px 10px;
  }

  footer {
    height: 106vh;
  }

  .logo-container {
    margin-bottom: 10px;
  }

  .footnote-links-container {
    /* border: 2px solid black; */
    width: 125%;
    margin-left: -40px;
  }

  .footnote {
    position: relative;
    /* border: 2px solid black; */
    margin-bottom: 20px;
    margin-left: -5px;
  }

  .footnote-links {
    margin-left: 10px;
  }

  .resources-links {
    margin-left: 6px;
  }

  .contact-links {
    position: relative;
    left: -90px;
  }

  .subscription-section {
    position: relative;
    top: 4%;
    left: -24px;
  }

  .input-email input {
    margin-bottom: 10px;
  }

  body {
    overflow-x: hidden;
  }
}
/* ... */

